--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 absl-py==0.1.10
 astor==0.6.2
+astroid==1.6.2
 bleach==1.5.0
 certifi==2018.1.18
 chardet==3.0.4
@@ -8,10 +9,14 @@ gast==0.2.0
 grpcio==1.10.0
 html5lib==0.9999999
 idna==2.6
+isort==4.3.4
+lazy-object-proxy==1.3.1
 Markdown==2.6.11
 matplotlib==2.1.2
+mccabe==0.6.1
 numpy==1.14.1
 protobuf==3.5.1
+pylint==1.8.3
 pyparsing==2.2.0
 python-dateutil==2.6.1
 pytz==2018.3
@@ -22,4 +27,5 @@ tensorflow==1.6.0
 termcolor==1.1.0
 urllib3==1.22
 Werkzeug==0.14.1
+wrapt==1.10.11
 xlrd==1.1.0
