--- a/requirements.txt
+++ b/requirements.txt
@@ -7,25 +7,29 @@ chardet==3.0.4
 cycler==0.10.0
 gast==0.2.0
 grpcio==1.10.0
+h5py==2.9.0
 html5lib==0.9999999
 idna==2.6
 isort==4.3.4
+Keras-Applications==1.0.6
+Keras-Preprocessing==1.0.5
 lazy-object-proxy==1.3.1
 Markdown==2.6.11
 matplotlib==2.1.2
 mccabe==0.6.1
 numpy==1.14.1
-protobuf==3.5.1
+pandas==0.23.4
+protobuf==3.6.1
 pylint==1.8.3
 pyparsing==2.2.0
 python-dateutil==2.6.1
 pytz==2018.3
-requests==2.18.4
+requests==2.21.0
 six==1.11.0
-tensorboard==1.9.0
-tensorflow==1.9.0
+tensorboard==1.12.1
+tensorflow==1.12.0
 termcolor==1.1.0
-urllib3==1.22
+urllib3==1.24.1
 Werkzeug==0.14.1
 wrapt==1.10.11
 xlrd==1.1.0
