--- a/requirements.txt
+++ b/requirements.txt
@@ -4,17 +4,16 @@ astroid==1.6.2
 bleach==1.5.0
 certifi==2018.1.18
 chardet==3.0.4
-cloudpickle==0.6.1
 cycler==0.10.0
-dask==1.1.0
-decorator==4.3.0
+decorator==4.4.0
 future==0.17.1
 gast==0.2.0
 grpcio==1.10.0
-gym==0.10.9
+gym==0.12.1
 h5py==2.9.0
 html5lib==0.9999999
 idna==2.6
+imageio==2.5.0
 isort==4.3.4
 Keras-Applications==1.0.6
 Keras-Preprocessing==1.0.5
@@ -22,28 +21,24 @@ lazy-object-proxy==1.3.1
 Markdown==2.6.11
 matplotlib==2.1.2
 mccabe==0.6.1
-networkx==2.2
+networkx==2.3
 numpy==1.14.1
 pandas==0.23.4
-Pillow==5.4.1
-pkg-resources==0.0.0
+Pillow==6.0.0
 protobuf==3.6.1
 pyglet==1.3.2
 pylint==1.8.3
 pyparsing==2.2.0
 python-dateutil==2.6.1
 pytz==2018.3
-PyWavelets==1.0.1
+PyWavelets==1.0.3
 requests==2.21.0
-scikit-image==0.14.2
-scikit-learn==0.20.2
-scipy==1.2.0
+scikit-image==0.15.0
+scipy==1.2.1
 six==1.11.0
 tensorboard==1.12.1
 tensorflow==1.12.0
-tensorflow-gpu==1.12.0
 termcolor==1.1.0
-toolz==0.9.0
 urllib3==1.24.1
 Werkzeug==0.14.1
 wrapt==1.10.11
